refact/ajustando classes de acordo com diagrama

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,12 @@ spring.jpa.defer-datasource-initialization=true
 # Datasource MySQL (padrão)
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/jogo_portos?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Executar data.sql
+# Executar data.sql APÓS criação das tabelas
 spring.sql.init.mode=always
+spring.sql.init.continue-on-error=true
 
 # Swagger/OpenAPI - título
 springdoc.api-docs.path=/v3/api-docs
